--- a/tcpip/ComRou_c/ComRou_c.vcxproj
+++ b/tcpip/ComRou_c/ComRou_c.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{E146526B-1C91-48A6-8648-79343A855FCA}</ProjectGuid>
+    <ProjectGuid>{F2F268FB-FD73-463E-AE54-44CAC1376538}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>ComRou_s</RootNamespace>
+    <RootNamespace>ComRou_c</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -147,7 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CompletionRoutine_s.c" />
+    <ClCompile Include="CompletionRoutine_c.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
